# 1_Object_Oriented/src/Presentation/Alexandria.WebApi/Endpoints/Books/AddBook/AddBookRequest.cs
@@ -4,6 +4,7 @@ namespace Alexandria.WebApi.Endpoints.Books.AddBook;
 
 internal sealed record AddBookRequest(
     string Title,
+    string Isbn,
     DateTimeOffset PublicationDate,
     ICollection<long> AuthorsIds
 )
@@ -11,6 +12,6 @@ internal sealed record AddBookRequest(
     internal Book ToCreatedBook()
     {
         var publication = new Publication(0, PublicationDate);
-        return new Book(0, Title, publication, AuthorsIds);
+        return new Book(0, Title, Isbn, publication, AuthorsIds);
     }
 }
